tests/paczka1/small_fuzzy/78083275.err
Error in line 1: emy5crj A249 52,5
Error in line 14: emy5crj A249 489
